--- a/example_workflow.ipynb
+++ b/example_workflow.ipynb
@@ -40,7 +40,19 @@
    "execution_count": 2,
    "id": "28208c5f-e93c-4ce9-b4f7-c4c7ea14e12e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'goes_ortho.get_data' has no attribute 'bounds_from_geojson'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Make request file from user input\u001b[39;00m\n\u001b[32m      2\u001b[39m request_filepath = go.get_data.make_request_json(workflowName = \u001b[33m\"\u001b[39m\u001b[33mexample\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      3\u001b[39m                                                  startDatetime = \u001b[33m\"\u001b[39m\u001b[33m2024-09-19T00:00:00Z\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      4\u001b[39m                                                  endDatetime = \u001b[33m\"\u001b[39m\u001b[33m2024-09-20T00:59:00Z\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m                                                  bounds = \u001b[43mgo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_data\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbounds_from_geojson\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mgrand_mesa.geojson\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m      6\u001b[39m                                                  satellite = \u001b[33m\"\u001b[39m\u001b[33mgoes18\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      7\u001b[39m                                                  product = \u001b[33m\"\u001b[39m\u001b[33mABI-L2-LSTC\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      8\u001b[39m                                                  band = \u001b[32m2\u001b[39m,\n\u001b[32m      9\u001b[39m                                                  variable = \u001b[33m\"\u001b[39m\u001b[33mLST\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     10\u001b[39m                                                  apiKey = \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m     11\u001b[39m                                                 )\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'goes_ortho.get_data' has no attribute 'bounds_from_geojson'"
+     ]
+    }
+   ],
    "source": [
     "# Make request file from user input\n",
     "request_filepath = go.get_data.make_request_json(workflowName = \"example\",\n",
