messing with plotting cmaps

--- a/processing/plot_zarr.ipynb
+++ b/processing/plot_zarr.ipynb
@@ -9,19 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import geogif"
+    "import geogif\n",
+    "import matplotlib.colors as mcolors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,43 +30,41 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset> Size: 133MB\n",
-      "Dimensions:                                           (t: 288,\n",
-      "                                                       num_star_looks: 24,\n",
-      "                                                       y: 160, x: 241,\n",
-      "                                                       number_of_harmonization_coefficients: 3,\n",
+      "Dimensions:                                           (num_star_looks: 24,\n",
+      "                                                       t: 288, y: 160, band: 1,\n",
       "                                                       number_of_image_bounds: 2,\n",
-      "                                                       band: 1,\n",
+      "                                                       x: 241,\n",
+      "                                                       number_of_harmonization_coefficients: 3,\n",
       "                                                       number_of_time_bounds: 2)\n",
       "Coordinates:\n",
-      "    band_wavelength_star_look                         (num_star_looks) float32 96B dask.array<chunksize=(24,), meta=np.ndarray>\n",
-      "    y_image                                           float32 4B ...\n",
-      "  * y                                                 (y) float64 1kB 0.1092 ...\n",
       "    t_star_look                                       (num_star_looks) datetime64[ns] 192B dask.array<chunksize=(24,), meta=np.ndarray>\n",
-      "    x_image                                           float32 4B ...\n",
-      "    band_wavelength                                   (band) float32 4B dask.array<chunksize=(1,), meta=np.ndarray>\n",
+      "  * y                                                 (y) float64 1kB 0.1092 ...\n",
       "    band_id                                           (band) int8 1B dask.array<chunksize=(1,), meta=np.ndarray>\n",
+      "    band_wavelength                                   (band) float32 4B dask.array<chunksize=(1,), meta=np.ndarray>\n",
+      "    x_image                                           float32 4B ...\n",
+      "    y_image                                           float32 4B ...\n",
       "  * t                                                 (t) datetime64[ns] 2kB ...\n",
+      "    band_wavelength_star_look                         (num_star_looks) float32 96B dask.array<chunksize=(24,), meta=np.ndarray>\n",
       "  * x                                                 (x) float64 2kB -0.0746...\n",
       "    lon                                               (x) float64 2kB -109.0 ...\n",
       "    lat                                               (y) float64 1kB 37.0 .....\n",
-      "Dimensions without coordinates: num_star_looks,\n",
+      "Dimensions without coordinates: num_star_looks, band, number_of_image_bounds,\n",
       "                                number_of_harmonization_coefficients,\n",
-      "                                number_of_image_bounds, band,\n",
       "                                number_of_time_bounds\n",
       "Data variables: (12/39)\n",
-      "    focal_plane_temperature_threshold_increasing      (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    nominal_satellite_height                          (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    Rad                                               (t, y, x) float64 89MB dask.array<chunksize=(72, 40, 121), meta=np.ndarray>\n",
-      "    a_h_NRTH                                          (t, number_of_harmonization_coefficients) float32 3kB dask.array<chunksize=(288, 3), meta=np.ndarray>\n",
-      "    nominal_satellite_subpoint_lat                    (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    esun                                              (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    algorithm_product_version_container               (t) int32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    algorithm_dynamic_input_data_container            (t) int32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    focal_plane_temperature_threshold_exceeded_count  (t) float64 2kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    processing_parm_version_container                 (t) int32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    planck_bc2                                        (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    earth_sun_distance_anomaly_in_AU                  (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
       "    ...                                                ...\n",
-      "    maximum_focal_plane_temperature                   (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    valid_pixel_count                                 (t) float64 2kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    yaw_flip_flag                                     (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    b_h_NRTH                                          (t, number_of_harmonization_coefficients) float32 3kB dask.array<chunksize=(288, 3), meta=np.ndarray>\n",
-      "    max_radiance_value_of_valid_pixels                (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
-      "    planck_bc1                                        (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    nominal_satellite_subpoint_lon                    (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    planck_fk1                                        (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    a_h_NRTH                                          (t, number_of_harmonization_coefficients) float32 3kB dask.array<chunksize=(288, 3), meta=np.ndarray>\n",
+      "    goes_imager_projection                            (t) int32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    nominal_satellite_subpoint_lat                    (t) float32 1kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
+      "    saturated_pixel_count                             (t) float64 2kB dask.array<chunksize=(288,), meta=np.ndarray>\n",
       "Attributes: (12/30)\n",
       "    naming_authority:          gov.nesdis.noaa\n",
       "    Conventions:               CF-1.7\n",
@@ -75,27 +74,27 @@
       "    production_site:           RBU\n",
       "    ...                        ...\n",
       "    timeline_id:               ABI Mode 6\n",
-      "    date_created:              2023-06-01T00:04:03.8Z\n",
-      "    time_coverage_start:       2023-06-01T00:01:17.4Z\n",
-      "    time_coverage_end:         2023-06-01T00:03:55.8Z\n",
+      "    date_created:              2023-06-05T00:04:04.5Z\n",
+      "    time_coverage_start:       2023-06-05T00:01:17.8Z\n",
+      "    time_coverage_end:         2023-06-05T00:03:56.3Z\n",
       "    LUT_Filenames:             SpaceLookParams(FM1A_ADR1270_PR_12_02_01)-7371...\n",
-      "    id:                        5b93f84c-4b24-4ede-b8b8-3f29dc9e128a\n"
+      "    id:                        71147bb2-a61a-491e-b6f0-9e35ede6abc0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23072/3743806464.py:11: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
+      "/tmp/ipykernel_31693/3543840655.py:11: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
       "  lat = np.linspace(lat_min, lat_max, ds.dims['y'])\n",
-      "/tmp/ipykernel_23072/3743806464.py:12: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
+      "/tmp/ipykernel_31693/3543840655.py:12: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
       "  lon = np.linspace(lon_min, lon_max, ds.dims['x'])\n"
      ]
     }
    ],
    "source": [
-    "zarr_path = '/storage/cdalden/goes/goes16/2023/'\n",
-    "zarr_file = '1june.zarr'\n",
+    "zarr_path = '/storage/cdalden/goes/goes16/channel13/'\n",
+    "zarr_file = 'goes16_C13_colorado_20230605.zarr'\n",
     "\n",
     "ds = xr.open_zarr(zarr_path + zarr_file)\n",
     "\n",
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
     "gif_bytes = geogif.dgif(\n",
     "    da,\n",
     "    fps=20,\n",
-    "    cmap=\"Greys_r\",\n",
+    "    cmap='viridis',\n",
     "    date_format=\"%Y-%m-%d %H:%M:%S\",\n",
     "    date_position=\"ul\",\n",
     "    bytes=True,\n",
@@ -137,6 +136,27 @@
     "# write gif to file\n",
     "with open(f\"test1.gif\", \"wb\") as f:\n",
     "    f.write(gif_bytes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(14.13217678)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "varrange = da.max() - da.min()\n",
+    "da.min().values"
    ]
   },
   {
