adding mp4 option to plots

--- a/processing/03_plot_RGB.ipynb
+++ b/processing/03_plot_RGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from datetime import datetime, timedelta\n",
     "import imageio\n",
     "import os\n",
+    "import shutil\n",
     "\n",
     "# suppress warnings\n",
     "import warnings\n",
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
     "    rgb_plot = plt.imshow(rgb_image, extent=[lon.min(), lon.max(), lat.min(), lat.max()])\n",
     "    plt.xlabel('Longitude')\n",
     "    plt.ylabel('Latitude')\n",
-    "    plt.title('GOES RGB Composite - ' + date + ' ' + time_of_day)\n",
+    "    plt.title('GOES Day Cloud Phase RGB Composite - ' + date + ' ' + time_of_day + ' UTC')\n",
     "    plt.axis('on')  # Show the axis\n",
     "\n",
     "    # Save the plot as a PNG file\n",
@@ -127,24 +128,65 @@
     "        elif channel == '13':\n",
     "            ds_red = ds\n",
     "\n",
-    "    return plot_rgb_image(ds_red, ds_green, ds_blue, date, time_of_day)\n"
+    "    return plot_rgb_image(ds_red, ds_green, ds_blue, date, time_of_day)\n",
+    "\n",
+    "def create_gif_from_pngs(png_dir, output_gif):\n",
+    "    # Get a list of all PNG files in the directory\n",
+    "    png_files = sorted([f for f in os.listdir(png_dir) if f.endswith('.png')])\n",
+    "\n",
+    "    # Read each image and append it to the images list\n",
+    "    images = []\n",
+    "    for png_file in png_files:\n",
+    "        image_path = os.path.join(png_dir, png_file)\n",
+    "        images.append(imageio.imread(image_path))\n",
+    "\n",
+    "    # Create and save the GIF\n",
+    "    imageio.mimsave(output_gif, images, duration=0.1)  # Adjust the duration as needed\n",
+    "    \n",
+    "def create_daily_goes_gif(date, start_time, end_time):\n",
+    "    start_time_out = start_time.replace(':', '')[:4]\n",
+    "    end_time_out =  end_time.replace(':', '')[:4]\n",
+    "    # Set the initial time and end time\n",
+    "    start_time = datetime.strptime(start_time, '%H:%M:%S')\n",
+    "    end_time = datetime.strptime(end_time, '%H:%M:%S')\n",
+    "    time_of_day = start_time\n",
+    "\n",
+    "    # Path to the directory\n",
+    "    plots_dir = './plots'\n",
+    "\n",
+    "    # Iterate over all files and directories in the specified directory\n",
+    "    for filename in os.listdir(plots_dir):\n",
+    "        file_path = os.path.join(plots_dir, filename)\n",
+    "        try:\n",
+    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
+    "                os.unlink(file_path)  # Remove the file or link\n",
+    "            elif os.path.isdir(file_path):\n",
+    "                shutil.rmtree(file_path)  # Remove the directory and its contents\n",
+    "        except Exception as e:\n",
+    "            print(f'Failed to delete {file_path}. Reason: {e}')\n",
+    "\n",
+    "    # Loop through every 10 minutes\n",
+    "    while time_of_day <= end_time:\n",
+    "        time_of_day_str = time_of_day.strftime('%H:%M:%S')\n",
+    "        zarr_to_rgb_image(date, time_of_day_str)\n",
+    "        time_of_day += timedelta(minutes=10)\n",
+    "        print(f'Generated RGB image for {time_of_day_str}')\n",
+    "\n",
+    "    # Directory containing PNG images\n",
+    "    png_dir = './plots'\n",
+    "\n",
+    "    # Output GIF file path\n",
+    "    output_gif = f'./goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
+    "\n",
+    "    # Create the GIF\n",
+    "    create_gif_from_pngs(png_dir, output_gif)\n",
+    "\n",
+    "    print(f\"GIF saved as {output_gif}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# time_of_day = '18:00:00'\n",
-    "\n",
-    "# zarr_to_rgb_image(date, time_of_day);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -174,62 +216,105 @@
       "Generated RGB image for 15:20:00\n",
       "Generated RGB image for 15:30:00\n",
       "Generated RGB image for 15:40:00\n",
-      "Generated RGB image for 15:50:00\n"
+      "Generated RGB image for 15:50:00\n",
+      "Generated RGB image for 16:00:00\n",
+      "Generated RGB image for 16:10:00\n",
+      "Generated RGB image for 16:20:00\n",
+      "Generated RGB image for 16:30:00\n",
+      "Generated RGB image for 16:40:00\n",
+      "Generated RGB image for 16:50:00\n",
+      "Generated RGB image for 17:00:00\n",
+      "Generated RGB image for 17:10:00\n",
+      "Generated RGB image for 17:20:00\n",
+      "Generated RGB image for 17:30:00\n",
+      "Generated RGB image for 17:40:00\n",
+      "Generated RGB image for 17:50:00\n",
+      "Generated RGB image for 18:00:00\n",
+      "Generated RGB image for 18:10:00\n",
+      "Generated RGB image for 18:20:00\n",
+      "Generated RGB image for 18:30:00\n",
+      "Generated RGB image for 18:40:00\n",
+      "Generated RGB image for 18:50:00\n",
+      "Generated RGB image for 19:00:00\n",
+      "Generated RGB image for 19:10:00\n",
+      "Generated RGB image for 19:20:00\n",
+      "Generated RGB image for 19:30:00\n",
+      "Generated RGB image for 19:40:00\n",
+      "Generated RGB image for 19:50:00\n",
+      "Generated RGB image for 20:00:00\n",
+      "Generated RGB image for 20:10:00\n",
+      "Generated RGB image for 20:20:00\n",
+      "Generated RGB image for 20:30:00\n",
+      "Generated RGB image for 20:40:00\n",
+      "Generated RGB image for 20:50:00\n",
+      "Generated RGB image for 21:00:00\n",
+      "Generated RGB image for 21:10:00\n",
+      "Generated RGB image for 21:20:00\n",
+      "Generated RGB image for 21:30:00\n",
+      "Generated RGB image for 21:40:00\n",
+      "Generated RGB image for 21:50:00\n",
+      "Generated RGB image for 22:00:00\n",
+      "Generated RGB image for 22:10:00\n",
+      "Generated RGB image for 22:20:00\n",
+      "Generated RGB image for 22:30:00\n",
+      "Generated RGB image for 22:40:00\n",
+      "Generated RGB image for 22:50:00\n",
+      "Generated RGB image for 23:00:00\n",
+      "Generated RGB image for 23:10:00\n",
+      "Generated RGB image for 23:20:00\n",
+      "Generated RGB image for 23:30:00\n",
+      "Generated RGB image for 23:40:00\n",
+      "Generated RGB image for 23:50:00\n",
+      "GIF saved as ./goes_RGB_20230603_1200_2350.gif\n"
      ]
     }
    ],
    "source": [
-    "# Set the initial time and end time\n",
-    "date = '20230612'\n",
-    "start_time = datetime.strptime('12:00:00', '%H:%M:%S')\n",
-    "end_time = datetime.strptime('15:50:00', '%H:%M:%S')\n",
-    "time_of_day = start_time\n",
+    "date = '20230603'\n",
+    "start_time = '12:00:00'\n",
+    "end_time = '23:50:00'\n",
     "\n",
-    "# Loop through every 10 minutes from 10:00 to 18:00\n",
-    "while time_of_day <= end_time:\n",
-    "    time_of_day_str = time_of_day.strftime('%H:%M:%S')\n",
-    "    zarr_to_rgb_image(date, time_of_day_str)\n",
-    "    time_of_day += timedelta(minutes=10)\n",
-    "    print(f'Generated RGB image for {time_of_day_str}')"
+    "create_daily_goes_gif(date, start_time, end_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GIF saved as ./goes_RGB_20230612_1200_2350.gif\n"
+      "Moviepy - Building video goes_RGB_20230603_1200_2350.mp4.\n",
+      "Moviepy - Writing video goes_RGB_20230603_1200_2350.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                             \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready goes_RGB_20230603_1200_2350.mp4\n"
      ]
     }
    ],
    "source": [
-    "def create_gif_from_pngs(png_dir, output_gif):\n",
-    "    # Get a list of all PNG files in the directory\n",
-    "    png_files = sorted([f for f in os.listdir(png_dir) if f.endswith('.png')])\n",
+    "from moviepy.editor import VideoFileClip\n",
     "\n",
-    "    # Read each image and append it to the images list\n",
-    "    images = []\n",
-    "    for png_file in png_files:\n",
-    "        image_path = os.path.join(png_dir, png_file)\n",
-    "        images.append(imageio.imread(image_path))\n",
+    "# Load the GIF\n",
+    "clip = VideoFileClip(\"/home/cdalden/goes_work/processing/goes_RGB_20230603_1200_2350.gif\")\n",
     "\n",
-    "    # Create and save the GIF\n",
-    "    imageio.mimsave(output_gif, images, duration=0.5)  # Adjust the duration as needed\n",
-    "\n",
-    "# Directory containing PNG images\n",
-    "png_dir = './plots'\n",
-    "\n",
-    "# Output GIF file path\n",
-    "output_gif = './goes_RGB_20230612_1200_2350.gif'\n",
-    "\n",
-    "# Create the GIF\n",
-    "create_gif_from_pngs(png_dir, output_gif)\n",
-    "\n",
-    "print(f\"GIF saved as {output_gif}\")"
+    "# Save as MP4\n",
+    "clip.write_videofile(\"goes_RGB_20230603_1200_2350.mp4\", codec=\"libx264\")"
    ]
   },
   {
