--- a/data_download/goes_nc_to_zarr.ipynb
+++ b/data_download/goes_nc_to_zarr.ipynb
@@ -50,7 +50,8 @@
     "\n",
     "    # Save the combined dataset to a Zarr file\n",
     "    out_name = out_name\n",
-    "    combined_ds.to_zarr(out_dir+out_name)"
+    "    combined_ds.to_zarr(out_dir+out_name)\n",
+    "    return print(f\"Zarr file saved to {out_dir+out_name}\")"
    ]
   },
   {
